--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ sublime_fuzzy = "0.7.0"
 fuzzy-matcher = "0.3.7"
 ron = "0.8.1"
 serde = { version = "1.0.215", features = ["derive"] }
+once_cell = "1.20.2"
