--- a/UWSM-Launcher/Cargo.toml
+++ b/UWSM-Launcher/Cargo.toml
@@ -7,10 +7,10 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-anyrun-plugin = { git = "https://github.com/Kirottu/anyrun" }
+anyrun-plugin = "0.1.0"
 abi_stable = "0.11.3"
 sublime_fuzzy = "0.7.0"
 fuzzy-matcher = "0.3.7"
 ron = "0.8.1"
-serde = { version = "1.0.215", features = ["derive"] }
+serde = { version = "1.0.216", features = ["derive"] }
 once_cell = "1.20.2"
