--- a/power-menu/Cargo.toml
+++ b/power-menu/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "uwsm-launcher"
+name = "power-menu"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,9 +7,8 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-anyrun-plugin = "0.1.0"
 abi_stable = "0.11.3"
+anyrun-plugin = "0.1.0"
 fuzzy-matcher = "0.3.7"
-ron = "0.8.1"
 serde = { version = "1.0.216", features = ["derive"] }
-once_cell = "1.20.2"
+whoami = "1.5.2"
